--- a/.gitmodules
+++ b/.gitmodules
@@ -1,17 +1,8 @@
-[submodule "scripts/deploy-aws-manifests/vendor/github.com/pivotal-cf-experimental/bosh-test"]
-	path = scripts/deploy-aws-manifests/vendor/github.com/pivotal-cf-experimental/bosh-test
-	url = https://github.com/pivotal-cf-experimental/bosh-test.git
-[submodule "scripts/deploy-aws-manifests/vendor/github.com/aws/aws-sdk-go"]
-	path = scripts/deploy-aws-manifests/vendor/github.com/aws/aws-sdk-go
-	url = https://github.com/aws/aws-sdk-go.git
 [submodule "scripts/run-consats/vendor/github.com/pivotal-cf-experimental/gomegamatchers"]
 	path = scripts/run-consats/vendor/github.com/pivotal-cf-experimental/gomegamatchers
 	url = https://github.com/pivotal-cf-experimental/gomegamatchers.git
 [submodule "scripts/run-consats/vendor/gopkg.in/yaml.v2"]
 	path = scripts/run-consats/vendor/gopkg.in/yaml.v2
-	url = https://gopkg.in/yaml.v2
-[submodule "scripts/deploy-aws-manifests/vendor/gopkg.in/yaml.v2"]
-	path = scripts/deploy-aws-manifests/vendor/gopkg.in/yaml.v2
 	url = https://gopkg.in/yaml.v2
 [submodule "scripts/etcd/run-eats/vendor/github.com/pivotal-cf-experimental/gomegamatchers"]
 	path = scripts/etcd/run-eats/vendor/github.com/pivotal-cf-experimental/gomegamatchers
@@ -19,3 +10,12 @@
 [submodule "scripts/etcd/run-eats/vendor/gopkg.in/yaml.v2"]
 	path = scripts/etcd/run-eats/vendor/gopkg.in/yaml.v2
 	url = https://gopkg.in/yaml.v2
+[submodule "scripts/common/deploy-aws-manifests/vendor/github.com/pivotal-cf-experimental/bosh-test"]
+	path = scripts/common/deploy-aws-manifests/vendor/github.com/pivotal-cf-experimental/bosh-test
+	url = https://github.com/pivotal-cf-experimental/bosh-test.git
+[submodule "scripts/common/deploy-aws-manifests/vendor/github.com/aws/aws-sdk-go"]
+	path = scripts/common/deploy-aws-manifests/vendor/github.com/aws/aws-sdk-go
+	url = https://github.com/aws/aws-sdk-go.git
+[submodule "scripts/common/deploy-aws-manifests/vendor/gopkg.in/yaml.v2"]
+	path = scripts/common/deploy-aws-manifests/vendor/gopkg.in/yaml.v2
+	url = https://gopkg.in/yaml.v2.git
