--- a/scripts/common/deploy-aws-manifests/deploy-etcd-aws-manifests.yml
+++ b/scripts/common/deploy-aws-manifests/deploy-etcd-aws-manifests.yml
@@ -9,6 +9,7 @@ image_resource:
 inputs:
   - name: infrastructure-ci
   - name: release
+  - name: consul-release
 
 params:
   BOSH_ENVIRONMENT:
@@ -21,5 +22,4 @@ params:
   MANIFEST_PATH:
 
 run:
-  path: infrastructure-ci/scripts/deploy-aws-manifests/deploy-consul-aws-manifests
-
+  path: infrastructure-ci/scripts/common/deploy-aws-manifests/deploy-etcd-aws-manifests
