--- a/scripts/common/deploy-aws-manifests/deploy-etcd-aws-manifests.yml
+++ b/scripts/common/deploy-aws-manifests/deploy-etcd-aws-manifests.yml
@@ -7,7 +7,7 @@ image_resource:
     repository: cfinfrastructure/deployment
 
 inputs:
-  - name: infrastructure-ci
+  - name: ci
   - name: release
   - name: consul-release
 
@@ -22,4 +22,4 @@ params:
   MANIFEST_PATH:
 
 run:
-  path: infrastructure-ci/scripts/common/deploy-aws-manifests/deploy-etcd-aws-manifests
+  path: ci/scripts/common/deploy-aws-manifests/deploy-etcd-aws-manifests
