Switch to fork of diego-release for etcd
- waiting for PR to ignore links to be merged

[#133861045]

Signed-off-by: Dave Walter <dwalter@pivotal.io>

--- a/pipelines/etcd.yml
+++ b/pipelines/etcd.yml
@@ -75,11 +75,11 @@ resources:
 - name: diego-release-master
   type: git
   source:
-    branch: master
+    branch: develop
     ignore_paths:
     - .final_builds
     - releases
-    uri: https://github.com/cloudfoundry/diego-release.git
+    uri: https://github.com/christianang/diego-release.git
 
 - name: infrastructure-ci-bbl-states
   type: git
