--- a/pipelines/etcd.yml
+++ b/pipelines/etcd.yml
@@ -429,22 +429,21 @@ jobs:
     - get: bosh-lite
     - get: bosh-lite-stemcell
     - get: release
-      passed:
-      - eats-turbulence
-      trigger: true
       resource: etcd-release-develop
+      passed: [eats-turbulence]
+      trigger: true
   - task: deploy-bosh-lite-manifests
     file: ci/scripts/deploy-bosh-lite-manifests/task.yml
     params:
       BOSH_AWS_ACCESS_KEY_ID: {{infrastructure_account_aws_access_key_id}}
       BOSH_AWS_SECRET_ACCESS_KEY: {{infrastructure_account_aws_secret_access_key}}
-      BOSH_LITE_KEYPAIR: bosh-lite
-      BOSH_LITE_NAME: bosh-lite-etcd
-      BOSH_LITE_PRIVATE_KEY_CONTENTS: {{bosh_lite_private_key}}
       BOSH_LITE_SECURITY_GROUP: {{bosh_lite_security_group}}
       BOSH_LITE_SUBNET_ID: {{bosh_lite_subnet_id}}
-      DEPENDENCIES: cloudfoundry-incubator/consul-release
+      BOSH_LITE_NAME: bosh-lite-etcd
+      BOSH_LITE_KEYPAIR: bosh-lite
+      BOSH_LITE_PRIVATE_KEY_CONTENTS: {{bosh_lite_private_key}}
       MANIFESTS: manifests/bosh-lite/3-node-with-ssl.yml manifests/bosh-lite/3-node-no-ssl.yml
+      DEPENDENCIES: cloudfoundry-incubator/consul-release
     on_failure:
       put: slack-alert
       params:
