--- a/pipelines/etcd.yml
+++ b/pipelines/etcd.yml
@@ -13,6 +13,7 @@ groups:
   - test-with-diego
   - test-cf-tls-upgrade
   - delete-deployments
+  - create-final-release
   - merge-master-into-develop
 - name: cleanup
   jobs:
@@ -131,6 +132,13 @@ resources:
   type: bosh-io-stemcell
   source:
     name: bosh-warden-boshlite-ubuntu-trusty-go_agent
+
+- name: oss-s3-buckets-stack
+  type: git
+  source:
+    branch: master
+    private_key: {{oss-s3-buckets-stack-private-key}}
+    uri: git@github.com:cloudfoundry/oss-s3-buckets-stack.git
 
 - name: slack-alert
   type: slack-notification
@@ -393,6 +401,30 @@ jobs:
       put: slack-alert
       params:
         text: {{slack_failure_text}}
+
+- name: create-final-release
+  public: true
+  serial: true
+  plan:
+  - aggregate:
+    - get: ci
+      resource: infrastructure-ci
+    - get: oss-s3-buckets-stack
+    - get: release-repo
+      resource: etcd-release-develop
+      passed: [delete-deployments]
+      trigger: true
+    - get: release-repo-master
+      resource: etcd-release-master
+  - task: create-final-release
+    file: ci/scripts/create-final-release/task.yml
+    params:
+      RELEASE_NAME: etcd
+  - put: etcd-release-master
+    params:
+      repository: final-release-repo
+      tag: final-release-repo/version_number
+      tag_prefix: v
 
 - name: merge-master-into-develop
   public: true
