--- a/pipelines/consul.yml
+++ b/pipelines/consul.yml
@@ -4,6 +4,7 @@ groups:
   jobs:
   - check-git-submodules
   - test-confab
+  - test-confab-windows
   - consats-linux
   - consats-linux-turbulence
   - consats-windows
@@ -184,6 +185,27 @@ jobs:
 
           https://p-concourse.wings.cf-app.com/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
 
+- name: test-confab-windows
+  public: true
+  serial: true
+  plan:
+  - aggregate:
+    - get: ci
+      resource: infrastructure-ci
+    - get: consul-release
+      resource: consul-release-develop
+      passed: [check-git-submodules]
+      trigger: true
+  - task: test-confab-windows
+    file: ci/scripts/consul/test-confab-windows/task.yml
+    on_failure:
+      put: slack-alert
+      params:
+        text: |
+          [$BUILD_PIPELINE_NAME/$BUILD_JOB_NAME] failed:
+
+          https://p-concourse.wings.cf-app.com/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
+
 - name: consats-linux
   public: true
   serial: true
@@ -194,7 +216,7 @@ jobs:
       resource: infrastructure-ci
     - get: consul-release
       resource: consul-release-develop
-      passed: [test-confab]
+      passed: [test-confab, test-confab-windows]
       trigger: true
     - get: stemcell
       resource: gcp-stemcell
@@ -260,7 +282,7 @@ jobs:
       resource: infrastructure-ci
     - get: consul-release
       resource: consul-release-develop
-      passed: [test-confab]
+      passed: [test-confab, test-confab-windows]
       trigger: true
     - get: stemcell
       resource: gcp-stemcell
