--- a/pipelines/etcd.yml
+++ b/pipelines/etcd.yml
@@ -504,7 +504,8 @@ jobs:
 
 - name: test-cf-tls-upgrade
   serial_groups:
-  - cf
+  - cf-tls
+  # Changed the serial group so we don't block other jobs
   plan:
   - aggregate:
     - get: infrastructure-ci
@@ -538,7 +539,7 @@ jobs:
       resource: infrastructure-ci
     - get: etcd-release
       passed:
-      - test-cf-tls-upgrade
+      - test-with-diego
       trigger: true
       resource: etcd-release-develop
   - task: delete-deployments
